--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,43 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+::selection {
+    background-color: #4B5563;
+    color: white;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body::-webkit-scrollbar {
+    width: 12px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body::-webkit-scrollbar-thumb {
+    background-color: #4B5563;
+    border-radius: 6px;
+    transition: all 0.5s ease-in-out;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+body::-webkit-scrollbar-thumb:hover {
+    background-color: #53585e;
+    transition: all 0.5s ease-in-out;
 }
 
-.card {
-  padding: 2em;
+body::-webkit-scrollbar-track {
+    background-color: #FFFFFF;
 }
 
-.read-the-docs {
-  color: #888;
+body::-webkit-scrollbar-corner {
+    background-color: #FFFFFF;
+}
+
+.text-gradient-gray {
+    background: linear-gradient(to right, #dcdcdc, #4B5563);
+    background-clip: text;
+    color: transparent;
+}
+
+.navbar-link-active {
+    color: #90acc0;
+    font-weight: bold;
+    border-bottom: 2px solid #859fb1;
 }
