--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 ::selection {
     background-color: #4B5563;
     color: white;
@@ -40,4 +46,108 @@ body::-webkit-scrollbar-corner {
     color: #90acc0;
     font-weight: bold;
     border-bottom: 2px solid #859fb1;
+}
+
+.preloader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: #ffffff;
+    z-index: 9999;
+}
+
+.spinner {
+    width: 40px;
+    height: 40px;
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-top-color: #1F2937;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.slider-container {
+    position: relative;
+    width: 100%;
+    overflow-x: hidden;
+}
+
+.button-container {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.previous-button,
+.next-button {
+    margin-bottom: 460px;
+    background: black;
+    opacity: 0.7;
+    border-radius: 20px;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    font-size: 24px;
+    color: white;
+}
+
+.previous-button {
+    margin-right: auto;
+}
+
+.next-button {
+    margin-left: auto;
+}
+
+.block-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 38%;
+    margin-bottom: 100px;
+}
+
+.block {
+    margin-top: 5px;
+    width: 130px;
+    height: 15px;
+    border-radius: 10px;
+    background-color: #f0f0f0;
+    position: relative;
+}
+
+.block:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 0;
+    background-color: #3f4d62;
+}
+
+.block.highlight:after {
+    width: 100%;
+    border-radius: 10px;
+    animation: fillUp 3s ease-in-out forwards;
+}
+
+@keyframes fillUp {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 100%;
+    }
 }
