--- a/src/App.css
+++ b/src/App.css
@@ -48,26 +48,6 @@ body::-webkit-scrollbar-corner {
     border-bottom: 2px solid #859fb1;
 }
 
-.preloader {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background-color: #ffffff;
-    z-index: 9999;
-}
-
-.spinner {
-    width: 40px;
-    height: 40px;
-    border: 4px solid rgba(0, 0, 0, 0.1);
-    border-top-color: #1F2937;
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-}
-
 @keyframes spin {
     to {
         transform: rotate(360deg);
@@ -150,4 +130,50 @@ body::-webkit-scrollbar-corner {
     to {
         width: 100%;
     }
+}
+
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    opacity: 1;
+    transition: opacity 1s ease-out;
+}
+
+.preloader.fade-out {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.spinner {
+    width: 400px;
+    height: 100px;
+    animation: pulse 1.7s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+.spinner img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
