--- a/src/App.css
+++ b/src/App.css
@@ -1,178 +1,1 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-
-/* Base Styles */
-body {
-    font-family: 'Roboto', sans-serif;
-}
-
-::selection {
-    background-color: #4B5563;
-    color: white;
-}
-
-/* Scrollbar Styles */
-body::-webkit-scrollbar {
-    width: 12px;
-}
-
-body::-webkit-scrollbar-thumb {
-    background-color: #4B5563;
-    border-radius: 6px;
-    transition: all 0.5s ease-in-out;
-}
-
-body::-webkit-scrollbar-thumb:hover {
-    background-color: #53585e;
-    transition: all 0.5s ease-in-out;
-}
-
-body::-webkit-scrollbar-track {
-    background-color: #FFFFFF;
-}
-
-body::-webkit-scrollbar-corner {
-    background-color: #FFFFFF;
-}
-
-img,
-button {
-    user-select: none;
-}
-
-.text-gradient-gray {
-    background: linear-gradient(to right, #dcdcdc, #4B5563);
-    background-clip: text;
-    color: transparent;
-}
-
-.navbar-link-active {
-    color: #90acc0;
-    font-weight: bold;
-    border-bottom: 2px solid #859fb1;
-}
-
-/* Slider Container */
-.slider-container {
-    position: relative;
-    width: 100%;
-    overflow-x: hidden;
-}
-
-.button-container {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    right: 10px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.previous-button,
-.next-button {
-    background: black;
-    color: white;
-    font-size: 24px;
-    border: none;
-    border-radius: 20px;
-    padding: 10px;
-    cursor: pointer;
-    opacity: 0.7;
-    margin-bottom: 460px;
-}
-
-.previous-button {
-    margin-right: auto;
-}
-
-.next-button {
-    margin-left: auto;
-}
-
-.block-container {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 37%;
-    margin-bottom: 100px;
-}
-
-.block {
-    position: relative;
-    width: 130px;
-    height: 15px;
-    margin-top: 5px;
-    margin-left: 8px;
-    border-radius: 10px;
-    background-color: #f0f0f0;
-}
-
-.block:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 0;
-    background-color: #3f4d62;
-}
-
-.block.highlight:after {
-    width: 100%;
-    border-radius: 10px;
-    animation: fillUp 3s ease-in-out forwards;
-}
-
-/* Preloader */
-.preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    z-index: 9999;
-    opacity: 1;
-    transition: opacity 1s ease-out;
-}
-
-.spinner {
-    width: 250px;
-    height: 150px;
-    animation: pulse 1.7s infinite;
-}
-
-.spinner img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-/* Keyframes */
-@keyframes fillUp {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 100%;
-    }
-}
-
-@keyframes pulse {
-    0% {
-        transform: scale(1);
-    }
-
-    50% {
-        transform: scale(1.1);
-    }
-
-    100% {
-        transform: scale(1);
-    }
-}
+@import "tailwindcss/base";@import "tailwindcss/components";@import "tailwindcss/utilities";@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');body{font-family:'Roboto',sans-serif}::selection{background-color:#4B5563;color:white}body::-webkit-scrollbar{width:12px}body::-webkit-scrollbar-thumb{background-color:#4B5563;border-radius:6px;transition:all .5s ease-in-out}body::-webkit-scrollbar-thumb:hover{background-color:#53585e;transition:all .5s ease-in-out}body::-webkit-scrollbar-track{background-color:#FFFFFF}body::-webkit-scrollbar-corner{background-color:#FFFFFF}img,button{user-select:none}.text-gradient-gray{background:linear-gradient(to right,#dcdcdc,#4B5563);background-clip:text;color:transparent}.navbar-link-active{color:#436075;font-weight:bold;border-bottom:2px solid #436075}.slider-container{position:relative;width:100%;overflow-x:hidden}.button-container{position:absolute;bottom:10px;left:10px;right:10px;display:flex;justify-content:space-between}.previous-button,.next-button{background:black;color:white;font-size:24px;border:none;border-radius:20px;padding:10px;cursor:pointer;opacity:.7;margin-bottom:460px}.previous-button{margin-right:auto}.next-button{margin-left:auto}.block-container{display:flex;justify-content:space-between;padding:0 37%;margin-bottom:100px}.block{position:relative;width:130px;height:15px;margin-top:5px;margin-left:8px;border-radius:10px;background-color:#f0f0f0}.block:after{content:'';position:absolute;top:0;left:0;height:100%;width:0;background-color:#3f4d62}.block.highlight:after{width:100%;border-radius:10px;animation:fillUp 3s ease-in-out forwards}.preloader{position:fixed;top:0;left:0;width:100%;height:100%;display:flex;justify-content:center;align-items:center;background-color:white;z-index:9999;opacity:1;transition:opacity 1s ease-out}.spinner{width:250px;height:150px;animation:pulse 1.7s infinite}.spinner img{width:100%;height:100%;object-fit:contain}@keyframes fillUp{from{width:0}to{width:100%}}@keyframes pulse{0%{transform:scale(1)}50%{transform:scale(1.1)}100%{transform:scale(1)}}
